footer style updated

--- a/index.html
+++ b/index.html
@@ -1,51 +1,67 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <!--sorry vue :(-->
-    <script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-  
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="icon" href="static/frog16.png" type="image/png" sizes="16x16">
-    <link rel="icon" href="static/frog32.png" type="image/png" sizes="32x32">
-    <link rel="icon" href="static/frog64.png" type="image/gif" sizes="64x64">
-    
-    <title>终南山下蛤蟆洞</title>
-  </head>
-  <body style="background: url('static/bg.png'); background-size: cover;">
-    <nav class="cyan darken-4">
-        <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">终南山下蛤蟆洞</a>
-          <ul class="right hide-on-med-and-down">
-            <li><a href="#">Info</a></li>
-            <li><a href="#">Github</a></li>
-          </ul>
-    
-          <ul id="nav-mobile" class="side-nav" style="transform: translateX(-100%);">
-            <li><a href="#">Made with 🍉</a></li>
-            <li><a href="#">Info</a></li>
-          </ul>
-          <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-        </div>
-      </nav>
+<head>
+  <meta charset="utf-8">
+  <!--sorry vue :(-->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="static/style.css">
+
+  <link rel="icon" href="static/frog16.png" type="image/png" sizes="16x16">
+  <link rel="icon" href="static/frog32.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="static/frog64.png" type="image/gif" sizes="64x64">
+  <title>终南山下蛤蟆洞</title>
+</head>
+
+<body style="background: url('static/bg.png'); background-size: cover;">
+  <nav class="cyan darken-4">
+    <div class="nav-wrapper container">
+      <a id="logo-container" href="#" class="brand-logo">终南山下蛤蟆洞</a>
+      <ul class="right hide-on-med-and-down">
+        <li>
+          <a href="#">Info</a>
+        </li>
+        <li>
+          <a href="#">Github</a>
+        </li>
+      </ul>
+
+      <ul id="nav-mobile" class="side-nav" style="transform: translateX(-100%);">
+        <li>
+          <a href="#">Made with 🍉</a>
+        </li>
+        <li>
+          <a href="#">Info</a>
+        </li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse">
+        <i class="material-icons">menu</i>
+      </a>
+    </div>
+  </nav>
+  <main>
     <div class="container">
       <div id="app"></div>
-      <!-- built files will be auto injected -->
     </div>
-    <footer class="page-footer cyan darken-4 ">
-      <div class="footer-copyright">
-        <div class="container">
+  </main>
+  <footer class="page-footer cyan darken-4 ">
+    <div class="footer-copyright">
+      <div class="container">
         <a class="grey-text text-lighten-4 left" href="www.wandassembly.com/cn"> © 2017 WAND ASSEMBLY</a>
         <span class="grey-text text-lighten-4 right" href="#!">造福奋战在屏幕前的设计师们</span>
-        </div>
       </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
+</body>
+<script>
+
+
+</script>
+
 </html>
