--- a/index.html
+++ b/index.html
@@ -16,51 +16,28 @@
   <link rel="icon" href="static/frog16.png" type="image/png" sizes="16x16">
   <link rel="icon" href="static/frog32.png" type="image/png" sizes="32x32">
   <link rel="icon" href="static/frog64.png" type="image/gif" sizes="64x64">
-<<<<<<< HEAD
-  <title>Dummy Lorem</title>
+  <title>Vue Lorem</title>
 </head>
 
 <body style="background-color:#eceff1">
   <nav class="white">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo grey-text text-lighten-1">Dummy Lorem</a>
+      <a id="logo-container" href="#" class="brand-logo teal-text text-darden-1">Vue Lorem</a>
       <ul class="right hide-on-med-and-down">
           <li>
-          <a href="#" class="grey-text text-lighten-1">Made with 🥑</a>
+          <a href="#" class="teal-text text-lighten-1">Made with Vue.js and 🥑</a>
         </li>
         <li>
-          <a href="#" class="grey-text text-lighten-1">Github</a>
-=======
-  <title>终南山下蛤蟆洞</title>
-</head>
-
-<body style="background: url('static/bg.png'); background-size: cover;">
-  <nav class="cyan darken-4">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">终南山下蛤蟆洞</a>
-      <ul class="right hide-on-med-and-down">
-        <li>
-          <a href="#">Info</a>
-        </li>
-        <li>
-          <a href="#">Github</a>
->>>>>>> f7e3920e9e93a1b354b635fc803c0c5252254312
+          <a href="#" class="teal-text text-lighten-1">Github</a>
         </li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav" style="transform: translateX(-100%);">
         <li>
-<<<<<<< HEAD
-          <a href="#" class="grey-text text-lighten-1">Made with 🥑</a>
+          <a href="#" class="grey-text text-lighten-1">Made with Vue.js and 🥑</a>
         </li>
         <li>
           <a href="#" class="grey-text text-lighten-1">Github</a>
-=======
-          <a href="#">Made with 🍉</a>
-        </li>
-        <li>
-          <a href="#">Info</a>
->>>>>>> f7e3920e9e93a1b354b635fc803c0c5252254312
         </li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse">
@@ -73,18 +50,10 @@
       <div id="app"></div>
     </div>
   </main>
-<<<<<<< HEAD
   <footer class="page-footer white ">
     <div class="footer-copyright white">
       <div class="container white">
         <a class="grey-text text-lighten-1 left" href="www.sylin.me"> © 2018 Sylin.me</a>
-=======
-  <footer class="page-footer cyan darken-4 ">
-    <div class="footer-copyright">
-      <div class="container">
-        <a class="grey-text text-lighten-4 left" href="www.wandassembly.com/cn"> © 2017 WAND ASSEMBLY</a>
-        <span class="grey-text text-lighten-4 right" href="#!">造福奋战在屏幕前的设计师们</span>
->>>>>>> f7e3920e9e93a1b354b635fc803c0c5252254312
       </div>
     </div>
   </footer>
