add test, ci and firebase config

--- a/index.html
+++ b/index.html
@@ -50,17 +50,14 @@
       <div id="app"></div>
     </div>
   </main>
-  <footer class="page-footer white ">
+  <footer class="page-footer white" style="padding-top: 0px;">
     <div class="footer-copyright white">
       <div class="container white">
-        <a class="grey-text text-lighten-1 left" href="www.sylin.me"> © 2018 Sylin.me</a>
+        <a class="grey-text text-lighten-1 left" href="http://www.sylin.me"> © 2018 Sylin.me</a>
       </div>
     </div>
   </footer>
 </body>
 <script>
-
-
 </script>
-
 </html>
