--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="icon" href="static/frog16.png" type="image/png" sizes="16x16">
   <link rel="icon" href="static/frog32.png" type="image/png" sizes="32x32">
   <link rel="icon" href="static/frog64.png" type="image/gif" sizes="64x64">
-  <title>Vue Lorem</title>
+  <title>Dummy Lorem</title>
 </head>
 
 <body style="background-color:#eceff1">
@@ -28,7 +28,7 @@
           <a href="#" class="teal-text text-lighten-1">Made with Vue.js and 🥑</a>
         </li>
         <li>
-          <a href="#" class="teal-text text-lighten-1">Github</a>
+          <a href="https://github.com/B3nnyL/DummyLorem" class="teal-text text-lighten-1">Github</a>
         </li>
       </ul>
 
@@ -37,7 +37,7 @@
           <a href="#" class="grey-text text-lighten-1">Made with Vue.js and 🥑</a>
         </li>
         <li>
-          <a href="#" class="grey-text text-lighten-1">Github</a>
+          <a href="https://github.com/B3nnyL/DummyLorem" class="grey-text text-lighten-1">Github</a>
         </li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse">
