--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <!--sorry vue :(-->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script> -->
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <!-- Compiled and minified JavaScript -->
@@ -22,7 +22,7 @@
 <body style="background-color:#eceff1">
   <nav class="white">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo teal-text text-darden-1">Vue Lorem</a>
+      <a id="logo-container" href="#" class="brand-logo teal-text text-darden-1">Dummy Lorem</a>
       <ul class="right hide-on-med-and-down">
           <li>
           <a href="#" class="teal-text text-lighten-1">Made with Vue.js and 🥑</a>
